2016-04-12 Simon Viel
        * InclBrl4 layout with 25 x 100 micron pixels available
        * tagged as InDetTrackingGeometryXML-00-00-35

2016-04-08 Simon Viel
        * ExtBrl4 layout with 25 x 100 micron pixels available
        * tagged as InDetTrackingGeometryXML-00-00-34

2016-03-21 Noemi Calace <noemi.calace@cern.ch>
	* Adding BinnedLayerMaterial to layers
	* Adding custom material flag
	* Adding segmentation for the material layers
	* tagged as InDetTrackingGeometryXML-00-00-33

2016-02-18 Noemi Calace <noemi.calace@cern.ch>
	* Fixing tilt angle in the barrel region of inclined layouts
	* tagged as InDetTrackingGeometryXML-00-00-32

2016-02-17 Noemi Calace <noemi.calace@cern.ch>
	* Fixing tilt angle in the barrel region of inclined layouts
	* tagged as InDetTrackingGeometryXML-00-00-30 and InDetTrackingGeometryXML-00-00-31

2016-02-16 Noemi Calace <noemi.calace@cern.ch>
	* Fixing 5mm shift in FourLayersNoStub_23-25-dev0 layout
	* tagged as InDetTrackingGeometryXML-00-00-29

2016-02-11 Sabine Elles
	* Update moduel size : set to chip size without outer edges 
	       in order to match the SiDetectorElement surface size 
	* Fix inlined module Z position (based on sensor thickness not on module thickness)
	* Tag as InDetTrackingGeometryXML-00-00-28

2016-02-04 Eric Feng <Eric.Feng@cern.ch>
	* Correcting bug in stereo angle in Strip endcap from [-40, 40] mrad to [-20, 20]:
	  share/FourLayersNoStub_23-25-dev0_SCTEndcap.xml
	* Tagged as InDetTrackingGeometryXML-00-00-27

2016-02-04 Noemi Calace <noemi.calace@cern.ch>
	* Fixing identifiers and module phi position
	* REMEMBER: You need to have InDetTrackingGeometryUtils to make it work
        * tagged as InDetTrackingGeometryXML-00-00-26

2016-02-03 Noemi Calace <noemi.calace@cern.ch>
	* Adding the OverlapDescriptors
	* You need to have InDetTrackingGeometryUtils to make it work
        * tagged as InDetTrackingGeometryXML-00-00-25

2016-01-31 Noemi Calace <noemi.calace@cern.ch>