@@ -1,0 +1,240 @@
+<SiliconModulesGeo>
+
+<!-- ************************* IBL ************************* -->
+
+  <ModuleGeo>
+    <name>SingleChip_IBL</name>
+    <sensorLength>19.8</sensorLength>
+    <sensorWidth>16.01</sensorWidth>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_SimpleChip</hybridMat>
+    <chipMat>pix::Chip_SimpleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>DoubleLength_IBL</name>
+    <sensorLength>39.7</sensorLength>
+    <sensorWidth>16.01</sensorWidth>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_DoubleChip</hybridMat>
+    <chipMat>pix::Chip_DoubleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>DoubleWidth_IBL</name>
+    <sensorLength>19.8</sensorLength>
+    <sensorWidth>33.</sensorWidth>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_DoubleChip</hybridMat>
+    <chipMat>pix::Chip_DoubleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>FourChip_IBL</name>
+    <sensorLength>39.7</sensorLength>
+    <sensorWidth>33.</sensorWidth>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_FourChip</hybridMat>
+    <chipMat>pix::Chip_FourChip</chipMat>
+  </ModuleGeo>
+
+
+<!-- ************************ RD53 ************************* -->
+
+  <ModuleGeo>
+    <name>SingleChip_RD53</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_SimpleChip</hybridMat>
+    <chipMat>pix::Chip_SimpleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>DoubleLength_RD53</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_DoubleChip</hybridMat>
+    <chipMat>pix::Chip_DoubleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>DoubleWidth_RD53</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_DoubleChip</hybridMat>
+    <chipMat>pix::Chip_DoubleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>FourChip_RD53</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_FourChip</hybridMat>
+    <chipMat>pix::Chip_FourChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>SingleChip_RD53_25x100</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_SimpleChip</hybridMat>
+    <chipMat>pix::Chip_SimpleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>DoubleLength_RD53_25x100</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_DoubleChip</hybridMat>
+    <chipMat>pix::Chip_DoubleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>DoubleWidth_RD53_25x100</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_DoubleChip</hybridMat>
+    <chipMat>pix::Chip_DoubleChip</chipMat>
+  </ModuleGeo>
+
+  <ModuleGeo>
+    <name>FourChip_RD53_25x100</name>
+    <sensorMat>std::Silicon</sensorMat>
+    <hybridLength>0.</hybridLength>
+    <hybridWidth>0.</hybridWidth>
+    <hybridMat>pix::Hybrid_FourChip</hybridMat>
+    <chipMat>pix::Chip_FourChip</chipMat>
+  </ModuleGeo>
+
+
+<!-- ******************************************************* -->
+
+<ModuleGeo>
+   <name>Inner</name>
+   <sensorLength>40.9</sensorLength>
+   <sensorWidth>16.81</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>41.5</hybridLength>
+   <hybridWidth>18.8</hybridWidth>
+   <hybridMat>pix::HybridInner</hybridMat>
+   <chipMat>pix::ChipInner</chipMat>
+</ModuleGeo>
+
+<ModuleGeo>
+   <name>Outer</name>
+   <sensorLength>40.5</sensorLength>
+   <sensorWidth>33.91</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>41.3</hybridLength>
+   <hybridWidth>38.</hybridWidth>
+   <hybridMat>pix::Hybrid</hybridMat>
+   <chipMat>pix::Chip</chipMat>
+</ModuleGeo>
+
+<ModuleGeo>
+   <name>Inter</name>
+   <sensorLength>40.9</sensorLength>
+   <sensorWidth>33.91</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>41.5</hybridLength>
+   <hybridWidth>38.</hybridWidth>
+   <hybridMat>pix::HybridIntermediate</hybridMat>
+   <chipMat>pix::ChipIntermediate</chipMat>
+</ModuleGeo>
+
+<ModuleGeo>
+   <name>Hex</name>
+   <sensorLength>61.3</sensorLength>
+   <sensorWidth>33.91</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>61.3</hybridLength>
+   <hybridWidth>38.</hybridWidth>
+   <hybridMat>pix::HybridHex</hybridMat>
+   <chipMat>pix::ChipHex</chipMat>
+</ModuleGeo>
+
+<!-- ******************************************************* -->
+
+<ModuleGeo>
+   <name>Disk4</name>
+   <sensorLength>20.45</sensorLength>
+   <sensorWidth>16.81</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>21.5</hybridLength>
+   <hybridWidth>18.8</hybridWidth>
+   <hybridMat>pix::HybridSingleFine</hybridMat>
+   <chipMat>pix::ChipSingleFine</chipMat>
+</ModuleGeo>
+
+<ModuleGeo>
+   <name>Disk5</name>
+   <sensorLength>40.51</sensorLength>
+   <sensorWidth>33.91</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>41.3</hybridLength>
+   <hybridWidth>38.</hybridWidth>
+   <hybridMat>pix::HybridFine</hybridMat>
+   <chipMat>pix::ChipFine</chipMat>
+</ModuleGeo>
+
+<ModuleGeo>
+   <name>Disk6</name>
+   <sensorLength>61.31</sensorLength>
+   <sensorWidth>33.91</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>61.305</hybridLength>
+   <hybridWidth>38.</hybridWidth>
+   <hybridMat>pix::HybridHexFine</hybridMat>
+   <chipMat>pix::ChipHexFine</chipMat>
+</ModuleGeo>
+
+<!-- ******************************************************* -->
+
+<ModuleGeo>
+   <name>IBL1</name>
+   <sensorLength>40.1</sensorLength>
+   <sensorWidth>16.01</sensorWidth>
+   <hybridLength>0.</hybridLength>
+   <hybridWidth>0.</hybridWidth>
+   <hybridMat>pix::Hybrid_DoubleChip</hybridMat>
+   <chipMat>pix::Chip_DoubleChip</chipMat>
+</ModuleGeo>
+
+<ModuleGeo>
+   <name>IBL2</name>
+   <sensorLength>19.8</sensorLength>
+   <sensorWidth>16.01</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>0.</hybridLength>
+   <hybridWidth>0.</hybridWidth>
+   <hybridMat>pix::Hybrid_SimpleChip</hybridMat>
+   <chipMat>pix::Chip_SimpleChip</chipMat>
+</ModuleGeo>
+
+<ModuleGeo>
+   <name>Pixel</name>
+   <sensorLength>19.8</sensorLength>
+   <sensorWidth>16.01</sensorWidth>
+   <sensorMat>std::Silicon</sensorMat>
+   <hybridLength>0.</hybridLength>
+   <hybridWidth>0.</hybridWidth>
+   <hybridMat>pix::Hybrid_SimpleChip</hybridMat>
+   <chipMat>pix::Chip_SimpleChip</chipMat>
+</ModuleGeo>
+
+</SiliconModulesGeo>
